Adjustments to alignment issues on main pages

--- a/ressources/styles.css
+++ b/ressources/styles.css
@@ -1,20 +1,21 @@
  * {
   margin: 0;
   padding: 0;
+}
 
+.navbar {
+    height: 15vh;
 }
 
 .navbar-nav {
-
   text-align: center;
-
 }
 
 .header {
   height: 100 vh;
 }
 
-footer{
+footer {
   text-align: center;
 }
 
@@ -23,7 +24,6 @@ table, th, td {
   margin-top: -100px;
   border: 1px solid black;
   border-spacing: 20px;
-
 }
 
 
@@ -33,8 +33,7 @@ table, th, td {
 }
 
 .logo {
-  height: 48px;
-  padding: 2px 10px;
+  height: 10vh;
 }
 
 .icon-bar {
@@ -53,6 +52,10 @@ section {
   border-width: thin;
 }
 
+
+#micon {
+    margin-top: 1%;
+}
 
 .mid-text {
   font-size: 42px;
@@ -146,10 +149,7 @@ a:hover {
 
 /* Container around content */
 .container {
-  padding: 10px 40px;
-  position: relative;
-  background-color: inherit;
-  width: 50%;
+    background-color: inherit;
 }
 
 
@@ -299,14 +299,11 @@ div.involved-left-column {
 .involved-sidebar-container {
     width: 30%;
     float: right;
-    overflow: hidden;
     padding-left: 5%;
 }
 
 .involved-sidebar {
     text-align: center;
-    margin-bottom: -5000px;
-    padding-bottom: 5000px;
 }
 
 #involved-page-map-ratio {
@@ -319,10 +316,11 @@ div.involved-left-column {
 }
 
 #donor-button {
-    width: 25%;
+    width: 40%;
     font-size: 16px;
     background-color: lightgrey;
     border: 1px solid darkgrey;
+    margin: 2% 0%;
     padding: 1% 3%;
 }
 
@@ -333,10 +331,11 @@ div.involved-left-column {
 }
 
 #volunteer-button {
-    width: 25%;
+    width: 40%;
     font-size: 16px;
     background-color: lightgrey;
     border: 1px solid darkgrey;
+    margin: 2% 0%;
     padding: 1% 3%;
 }
 
@@ -345,7 +344,6 @@ div.involved-left-column {
 }
 
 #placeholder-margin {
-    margin-bottom: 50%;
 }
 
 
@@ -358,11 +356,12 @@ div.involved-left-column {
 }
 
 #volunteer-form {
-    height: 200px;
+    height: 32vh;
     font-size: 16px;
     border: 1px solid black;
     padding-top: 1%;
     padding-left: 2%;
+    padding-right: 5%;
 }
 
 #volunteer-login-content {
@@ -376,18 +375,19 @@ div.involved-left-column {
 }
 
 #volunteer-login-button {
-    width: 10%;
+    width: 30%;
     font-size: 16px;
     background-color: lightgrey;
     border: 1px solid darkgrey;
 }
 
 #provider-form {
-    height: 200px;
+    height: 32vh;
     font-size: 16px;
     border: 1px solid black;
     padding-top: 1%;
     padding-left: 2%;
+    padding-right: 5%;
 }
 
 #provider-login-content {
@@ -401,7 +401,7 @@ div.involved-left-column {
 }
 
 #provider-login-button {
-    width: 10%;
+    width: 30%;
     font-size: 16px;
     background-color: lightgrey;
     border: 1px solid darkgrey;
